chore: Clean up repository structure
- Remove build artifacts from git tracking (simulation work files, HLS test binaries)
- Remove duplicate simulation scripts (run_sim_backup.sh, run_sim_old.sh, run_sim_new.sh, run_sim_fixed.sh, run_sim_working.sh)
- Add .gitkeep files for placeholder directories (data/, logs/, models/, outputs/)
- Update .gitignore to properly exclude build artifacts and cache directories
- Update documentation references from run_sim_working.sh to simple_sim.sh
- Remove duplicate hardware/hardware/ directory
- Clean up Vivado cache directories
- Clean up egg-info directory

--- a/.gitignore
+++ b/.gitignore
@@ -47,10 +47,26 @@ env/
 vivado_*.backup.*
 xsim_*.backup.*
 
+# HLS
+*.pb
+*.sdb
+*.rlx
+# HLS compiled test binaries
+hardware/hls/test/tb_active_tracking
+hardware/hls/test/tb_baseline
+hardware/hls/test/tb_cam_lookup
+hardware/hls/test/tb_dataflow
+hardware/hls/test/tb_hierarchical
+
+# Simulation work directories
+hardware/hdl/sim/work/
+hardware/hdl/build/
+
 # Build outputs
 *.bit
 *.bin
 *.ltx
+*.vvp
 
 # Editor
 .vscode/
@@ -59,11 +75,15 @@ xsim_*.backup.*
 *.swo
 *~
 
-# Data files (optional - uncomment if you want to track these)
-# data/
-# logs/
-# models/
-# outputs/
+# Data files - keep .gitkeep files
+data/*
+!data/.gitkeep
+logs/*
+!logs/.gitkeep
+models/*
+!models/.gitkeep
+outputs/*
+!outputs/.gitkeep
 
 # OS
 .DS_Store
