feat: Complete HLS on-chip learning implementation and RTL test fixes
Major changes:
- Add HLS-based on-chip learning engine (STDP, R-STDP with eligibility traces)
- Add snn_top_hls module with AXI4-Stream interfaces
- Fix LIF neuron testbench parameters (threshold, leak_rate, weight)
- Fix synapse_array test expectations for parallel read timing
- Fix run_all_tests.sh pass/fail detection logic
- Remove deprecated modules (axi_wrapper.v replaced by HLS)
- Add Vivado project creation scripts for PYNQ-Z2
- Add PROJECT_STATUS.md documenting current progress

Test results:
- Verilog RTL: 12/12 tests passed
- Python: 87/90 passed, 3 skipped
- HLS C-simulation: All tests passed

Pending:
- HLS synthesis (requires GUI mode due to Tcl env issue)
- Vivado integration with HLS IP
- Bitstream generation for PYNQ-Z2

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,21 @@ outputs/*
 # OS
 .DS_Store
 Thumbs.db
+
+# HLS test binaries
+hardware/hls/test/tb_decoder
+hardware/hls/test/tb_encoder
+hardware/hls/test/tb_learning
+hardware/hls/test/tb_snn_top
+hardware/hls/test/tb_weight
+
+# Vitis journal files
+hardware/hls/vitis_journal.py
+*.jou
+*.log
+
+# Build outputs
+build/
+outputs/
+*.bit
+*.hwh
