Remove Spike Decoder Module and Related Tests
- Deleted spike_decoder.h and spike_decoder.cpp files, removing the spike decoding functionality from the project.
- Updated create_project.tcl to exclude the Spike Decoder project creation.
- Modified export_ip.tcl to stop exporting the Spike Decoder IP core.
- Removed references to the Spike Decoder in run_cosim.tcl.
- Eliminated the Spike Decoder testbench (tb_spike_decoder.cpp) and its associated test in run_tests.sh.
- Adjusted snn_top_hls.cpp to ensure compatibility after the removal of the Spike Decoder.

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,20 @@ xsim_*.backup.*
 *.pb
 *.sdb
 *.rlx
+
+# Vitis HLS output (v++ generated)
+hardware/hls/hls_output/hls/.autopilot/
+hardware/hls/hls_output/hls/.tcls/
+hardware/hls/hls_output/hls/.debug/
+hardware/hls/hls_output/hls/syn/
+hardware/hls/hls_output/hls/impl/
+hardware/hls/hls_output/hls/*.db
+hardware/hls/hls_output/hls/*.log
+hardware/hls/hls_output/hls/*.xml
+hardware/hls/hls_output/hls/*.json
+hardware/hls/hls_output/hls/config.cmdline
+hardware/hls/.Xil/
+
 # HLS compiled test binaries
 hardware/hls/test/tb_active_tracking
 hardware/hls/test/tb_baseline
